# micro80emu

./: .gitignore  CMakeLists.txt  Display.cpp  Display.h  Hardware.cpp  Hardware.h  I8080.cpp  I8080.h  README.md  README.ru.md  Screen.cpp  Screen.h  Types.h  main.cpp
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Hardware.cpp  Hardware.h  I8080.cpp  I8080.h  Keyboard.cpp  Screen.cpp  Screen.h  main.cpp
src/common/: CMakeLists.txt
src/cpu/: CMakeLists.txt
src/hardware/: CMakeLists.txt  Hardware.cpp  Hardware.h  Keyboard.h
src/video/: CMakeLists.txt  Video.cpp  Video.h
